# OpenSLMServer

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/openslmserver/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/openslmserver/: KtorServer.kt  LlamaNative.kt  MainActivity.kt  ModelManager.kt  Models.kt  QueueManager.kt  ServerService.kt
app/src/main/res/: plan.md
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/openslmserver/: ExampleUnitTest.kt  QueueManagerTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
